--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,26 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+ViewportPos=906,508
+ViewportId=0xE927CF2F
+Size=318,461
 Collapsed=0
+
+[Window][DockSpace Demo]
+Size=640,480
+Collapsed=0
+
+[Window][Example: Custom rendering]
+ViewportPos=1329,323
+ViewportId=0x3AC84485
+Size=485,414
+Collapsed=0
+
+[Window][Window]
+ViewportPos=974,243
+ViewportId=0x8C48FCEB
+Size=429,233
+Collapsed=0
+
+[Docking][Data]
 
